fixing login stylings

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -28,6 +28,7 @@ h4 {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    padding-top: 30px;
 }
 
 .loginShell button {
