--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -3,15 +3,15 @@ h4 {
     padding: 10px 30px 10px 66px;
     color: whitesmoke;
     position: relative;
-    overflow: hidden;
+    margin: -1px 0;
 }
 
 .fa-users, .fa-cogs {
     position: absolute;
     color: white;
-    font-size: 61px;
-    left: -21px;
-    top: -5px;
+    font-size: 62px;
+    left: -24px;
+    top: -4px;
 }
 
 .homeShell {
@@ -36,29 +36,34 @@ h4 {
 }
 
 .characterShell {
-    padding-bottom: 30px;
+    padding-bottom: 15px;
     background-color: white;
     -webkit-box-shadow: 5px 5px 15px 5px #000000;
     box-shadow: 5px 5px 15px 5px #000000;
+    overflow: hidden;
 }
 
 .character {
     display: flex;
     align-items: center;
-    padding: 0px 45px;
+    justify-content: space-evenly;
 }
 
 .characterLink {
     display: flex;
     width: 100%;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 
-.characterLink:hover, .characterLink:hover p {
+.characterLink:hover {
     background: purple;
-    color: white;
     cursor: pointer;
+    transition: .6s;
+}
+.characterLink:hover p, .characterLink:hover .fa-minus {
+    color: white;
+    transition: .6s;
 }
 
 .character p {
@@ -69,23 +74,33 @@ h4 {
 .character p:first-child {
     font-weight: 700;
     text-align: left;
-    padding-left: 15px;
+    padding-left: 70px;
 }
-
-.fa-plus, .fa-minus {
-    margin: 15px 5px;
-    padding: 5px;
+.character p:last-child {
+    padding-right: 70px;
 }
 
 .fa-plus {
-    margin: 15px 5px 15px 60px
+    margin: 15px 5px 15px 60px;
+    padding: 5px;
+    border-radius: 15px;
 }
 
-.fa-plus:hover, .fa-minus:hover {
+.fa-plus:hover {
     background: purple;
-    border-radius: 15px;
-    padding: 5px;
     color: whitesmoke;
+    transition: .6s;
+}
+
+.fa-minus {
+    padding: 5px;
+    border-radius: 15px;
+    margin-right: 70px;
+}
+.fa-minus:hover {
+    color: purple !important;
+    background: whitesmoke;
+    transition: .6s;
 }
 
 .overlay {
