added panicked circle

--- a/src/components/character/character.css
+++ b/src/components/character/character.css
@@ -911,6 +911,10 @@ input.excurrentLocation {
     top: 341px;
     position: relative;
 }
+.panickedCircle {
+    top: 483px;
+    width: 24px;
+}
 
 .circle-fill {
     background: whitesmoke;
