--- a/src/components/character/character.css
+++ b/src/components/character/character.css
@@ -30,6 +30,7 @@ input[type=number] {
 
 .spinnerShell {
     width: 75px;
+    min-height: 100vh;
     margin: 45px auto;
 }
 
@@ -596,7 +597,7 @@ input.excurrentLocation {
     top: -23px;
     left: 1px;
     height: 20px;
-    width: 144px;
+    width: 155px;
     text-align: left;
 }
 
