got editing in the view to work

--- a/src/components/character/character.css
+++ b/src/components/character/character.css
@@ -1195,7 +1195,7 @@ input.excurrentLocation {
     left: 96px;
 }
 
-.weaponProfileOne {
+.weaponProfileone {
     position: absolute;
     height: 303px;
     width: 151px;
