fixing hover color for login button

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -186,6 +186,10 @@ button:hover {
     color: black
 }
 
+.reverseColors:hover a {
+    color: black
+}
+
 .modelButtons .no:hover {
     background: #990000;
     color: whitesmoke;
