--- a/src/components/character/character.css
+++ b/src/components/character/character.css
@@ -208,105 +208,85 @@ input, textarea {
     font-family: 'Vollkorn SC', serif;
 }
 .filledOut p {
-    /* border-bottom: 2px solid; */
+    border-bottom: 2px solid;
     padding: 1px 5px;
 }
 
-.namePlate {
-    left: 20px;
-    top: 23px;
-}
 .nameLocation {
     left: 128px;
     top: 20px;
-    /* border-bottom: 2px solid; */
+    border-bottom: 2px solid;
     width: 272px;
-    padding: 1px 5px;
-}
-
-.playerPlate {
-    left: 402px;
-    top: 23px;
-}
-.playerScorePlate {
-    left: 445px;
-    top: 38px;
-    /* border-bottom: 2px solid; */
-    width: 152px;
     padding: 1px 5px;
 }
 
 .raceLocation {
     left: 53px;
     top: 43px;
-    /* border-bottom: 2px solid; */
+    border-bottom: 2px solid;
     width: 68px;
     padding: 1px 5px;
 }
-.racePlate {
-    left: 20px;
-    top: 46px;
-}
 
 .levelLocation {
-    left: 489px;
-    top: 43px;
-    /* border-bottom: 2px solid; */
-    width: 51px;
+    left: 494px;
+    top: 45px;
+    border-bottom: 2px solid;
+    width: 28px;
+    text-align: center;
 }
 input.levelLocation {
     left: 470px;
 }
 
 .primaryLocation {
-    left: 195px;
-    top: 43px;
-    width: 86px;
-    /* border-bottom: 2px solid; */
+    left: 205px;
+    top: 45px;
+    width: 115px;
+    padding-left: 5px;
+    border-bottom: 2px solid;
 }
 
 .primarylevelLocation {
-    left: 276px;
+    left: 199px;
     top: 43px;
-    width: 35px;
-    /* border-bottom: 2px solid; */
+    width: 93px;
 }
 input.primarylevelLocation {
     left: 282px;
 }
 
 .secondaryLocation {
-    left: 319px;
-    top: 43px;
-    width: 93px;
-    /* border-bottom: 2px solid; */
+    left: 326px;
+    top: 45px;
+    width: 115px;
+    border-bottom: 2px solid;
+    padding-left: 5px;
 }
 
 .secondarylevelLocation {
     left: 420px;
     top: 43px;
     width: 35px;
-    /* border-bottom: 2px solid; */
 }
 input.secondarylevelLocation {
     left: 413px;
 }
 
 .crpLocation {
-    left: 545px;
-    top: 43px;
-    width: 51px;
+    left: 551px;
+    top: 45px;
+    width: 46px;
     text-align: center;
-    /* border-bottom: 2px solid; */
+    border-bottom: 2px solid;
 }
 
 .excurrentLocation {
-    left: 319px;
+    left: 331px;
     top: 66px;
-    width: 127px;
     text-align: center;
-    width: 127px;
-    /* border-bottom: 2px solid; */
+    width: 115px;
+    border-bottom: 2px solid;
 }
 
 .extolevelLocation {
@@ -314,15 +294,16 @@ input.secondarylevelLocation {
     top: 66px;
     width: 151px;
     text-align: center;
-    /* border-bottom: 2px solid; */
+    border-bottom: 2px solid;
 }
 
 .drawbackLocation {
     left: 20px;
     top: 87px;
-    text-indent: 123px;
+    text-indent: 128px;
     width: 426px;
-    /* border-bottom: 2px solid; */
+    height: 51px;
+    overflow: hidden;
 }
 
 .drawbacktextArea {
@@ -336,6 +317,66 @@ input.secondarylevelLocation {
     overflow: hidden;
 }
 
+.statsShell {
+    position: absolute;
+    top: 147px;
+    left: 20px;
+    width: 127px;
+}
+
+.pageBase h1 {
+    background: #990000;
+    color: white;
+    margin: 0;
+    padding-left: 10px;
+    font-size: 15px;
+}
+
+.statRowsShell div, .movementRowsSell div {
+    display: flex;
+    justify-content: space-between;
+}
+
+.statRowsShell div:nth-child(even), .movementRowsSell div:nth-child(even) {
+    background: lightgray;
+}
+
+.movementRowsSell div div:nth-child(even) {
+    background: inherit;
+}
+
+.statRowsShell p, .movementRowsSell p {
+    position: unset !important;
+    z-index: 1;
+}
+
+.statRowsShell p:nth-child(2) {
+    font-family: 'Vollkorn SC', serif;
+    font-weight: bold;
+    margin-top: 2px
+}
+
+#confDieShell {
+    width: 48px;
+    position: relative;
+}
+
+#confDieShell p {
+    position: absolute !important;
+}
+
+#confDieShell p:nth-child(2) {
+    color: lightgray;
+    z-index: 0;
+    font-size: 9px;
+    top: 2px;
+    left: 2px;
+}
+
+.statRowsShell div:nth-child(even) #confDieShell p:nth-child(2) {
+    color: whitesmoke
+}
+
 .strLocation {
     left: 20px;
     top: 171px;
@@ -343,8 +384,6 @@ input.secondarylevelLocation {
     text-align: center;
 }
 .strConfrontationLocation {
-    left: 98px;
-    top: 171px;
     width: 48px;
     text-align: center;
 }
@@ -375,8 +414,6 @@ input.secondarylevelLocation {
     text-align: center;
 }
 .dexConfrontationLocation {
-    left: 98px;
-    top: 192px;
     width: 48px;
     text-align: center;
 }
@@ -416,8 +453,6 @@ input.secondarylevelLocation {
     text-align: center;
 }
 .conConfrontationLocation {
-    left: 98px;
-    top: 213px;
     width: 48px;
     text-align: center;
 }
@@ -429,8 +464,6 @@ input.secondarylevelLocation {
     text-align: center;
 }
 .intConfrontationLocation {
-    left: 98px;
-    top: 234px;
     width: 48px;
     text-align: center;
 }
@@ -442,8 +475,6 @@ input.secondarylevelLocation {
     text-align: center;
 }
 .wisConfrontationLocation {
-    left: 98px;
-    top: 255px;
     width: 48px;
     text-align: center;
 }
@@ -455,66 +486,70 @@ input.secondarylevelLocation {
     text-align: center;
 }
 .chaConfrontationLocation {
-    left: 98px;
-    top: 276px;
     width: 48px;
     text-align: center;
 }
 
+.movementShell {
+    position: absolute;
+    top: 147px;
+    left: 170px;
+    width: 276px;
+}
+
+.movementShell div p:first-child, .lengthShell {
+    font-family: 'Vollkorn SC', serif;
+    margin-top: 2px
+}
+
+.movementShell div p:first-child {
+    padding-left: 5px;
+    width: 50px;
+}
+
+.lengthShell p:first-child {
+    width: unset !important;
+    margin-top: 0
+}
+
+.lengthShell {
+    width: 173px;
+}
+
 .crawlLocation {
-    left: 220px;
-    top: 172px;
     width: 48px;
     text-align: center;
 }
 .crawlLengthLocation {
-    left: 274px;
-    top: 180px;
     width: 48px;
 }
 .walkLocation {
-    left: 220px;
-    top: 192px;
     width: 48px;
     text-align: center;
 }
 .walkLengthLocation {
-    left: 274px;
-    top: 192px;
     width: 48px;
 }
 .jogLocation {
-    left: 220px;
-    top: 213px;
     width: 48px;
     text-align: center;
 }
 .jogLengthLocation {
-    left: 274px;
-    top: 213px;
     width: 48px;
 }
 .runLocation {
-    left: 220px;
-    top: 234px;
     width: 48px;
     text-align: center;
 }
 .runLengthLocation {
-    left: 274px;
-    top: 235px;
     background: #f1f1f1;
     width: 153px;
 }
 .sprintLocation {
-    left: 220px;
-    top: 255px;
     width: 48px;
     text-align: center;
 }
 .sprintLengthLocation {
-    left: 274px;
-    top: 255px;
     background: white;
     width: 153px;
 }
