--- a/src/components/character/character.css
+++ b/src/components/character/character.css
@@ -165,7 +165,7 @@ input[type=number] {
 }
 
 .pageOne {
-    background-image: url("../../assets/page1.png");
+    /* background-image: url("../../assets/page1.png"); */
 }
 
 .pageTwo {
@@ -332,12 +332,23 @@ input.secondarylevelLocation {
     font-size: 15px;
 }
 
+.pageBase h2 {
+    background: #222;
+    color: white;
+    margin: 0;
+    text-align: center;
+    font-size: 13px;
+    font-family: 'Vollkorn SC', serif;
+    height: 19.6px;
+}
+
 .statRowsShell div, .movementRowsSell div {
     display: flex;
     justify-content: space-between;
 }
 
-.statRowsShell div:nth-child(even), .movementRowsSell div:nth-child(even) {
+.statRowsShell div:nth-child(even), .movementRowsSell div:nth-child(even), .vitalShell div:nth-child(even),
+ .rangeShell div:nth-child(odd) {
     background: lightgray;
 }
 
@@ -345,9 +356,12 @@ input.secondarylevelLocation {
     background: inherit;
 }
 
-.statRowsShell p, .movementRowsSell p {
+.statRowsShell p, .movementRowsSell p, .stressThresholdShell p, .stressThresholdShell input, .rangeShell p,
+ .socialShell p, .socialShell input {
     position: unset !important;
     z-index: 1;
+    margin: 0;
+    height: 19.6px;
 }
 
 .statRowsShell p:nth-child(2) {
@@ -600,29 +614,31 @@ input.secondarylevelLocation {
 }
 
 .weaponsquare {
+    background: url('../../assets/weaponsquare.png');
+    background-size: contain;
     position: absolute;
     height: 137px;
     width: 143px;
 }
 
 .weaponone {
-    top: 106px;
+    top: 97px;
     left: 471px;
 }
 
 .weapontwo {
-    top: 106px;
+    top: 97px;
     left: 648px;
 }
 
 .weaponthree {
-    top: 275px;
+    top: 267px;
     left: 472px;
 }
 
 .weaponfour {
     left: 648px;
-    top: 275px;
+    top: 267px;
 }
 
 .weaponsquare .attack {
@@ -716,12 +732,66 @@ input.secondarylevelLocation {
 
 .weaponsquare .name {
     position: absolute;
-    top: -23px;
+    top: -17px;
     left: 1px;
     height: 20px;
     width: 155px;
     text-align: left;
 }
+
+.weaponsquare .squareTitle {
+    position: absolute;
+    font-size: 10px;
+    font-family: 'Vollkorn SC', serif;
+    top: -28px;
+    left: 1px;
+    height: 20px;
+    width: 155px;
+    text-align: left;
+}
+
+.stressThresholdShell {
+    top: 425px;
+    right: 193px;
+    position: absolute;
+    width: 153px;
+}
+
+.vitalShell {
+    border: 2px solid black;
+}
+
+.vitalShell div {
+    display: flex;
+    justify-content: space-between;
+}
+
+.vitalShell div p, .vitalShell div input {
+    margin: 0;
+    width: 50%;
+    height: unset;
+}
+
+.vitalShell div p:first-child {
+    font-family: 'Vollkorn SC', serif;
+    font-size: 11px;
+    padding-left: 5px;
+}
+
+.vitalShell div:first-child p:first-child {
+    background: #222;
+    color: whitesmoke;
+    text-align: center;
+    padding-top: 3px;
+    font-size: 13px;
+    padding-left: 0;
+    margin: -1px;
+}
+
+.checkboxShell {
+    margin-top: 4px;
+}
+
 .currentstressLocation {
     top: 426px;
     left: 546px;
@@ -774,6 +844,31 @@ input.secondarylevelLocation {
     left: 546px;
     width: 74px;
     text-align: center;
+}
+
+.rangeShell {
+    display: flex;
+    flex-direction: column;
+    top: 425px;
+    right: 20px;
+    width: 151px;
+    position: absolute;
+}
+
+.rangeShell div {
+    display: flex;
+    justify-content: space-between;
+}
+
+.rangeShell div p {
+    text-align: center;
+}
+
+.rangeShell div p:first-child, .rangeShell div p:nth-child(3){
+    font-family: 'Vollkorn SC', serif;
+    font-size: 13px;
+    font-weight: bold;
+    width: 30px;
 }
 
 .maxrangeLocation {
@@ -1022,8 +1117,8 @@ input.secondarylevelLocation {
     border: solid 2px #000;
     width: 33px;
     height: 21px;
-    top: 341px;
-    position: relative;
+    position: absolute;
+    z-index: 2;
 }
 .panickedCircle {
     top: 614px;
@@ -1423,6 +1518,66 @@ input.secondarylevelLocation {
     min-height: 63px;
     overflow: hidden;
     top: 88px !important;
+}
+
+.socialShell {
+    top: 319px;
+    position: absolute;
+    left: 20px;
+    width: 426px;
+}
+
+.honorShell, .honorShell div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.honorCategoryShell {
+    position: relative;
+}
+
+.honorShell p {
+    font-family: 'Vollkorn SC', serif;
+    font-weight: bold;
+}
+
+.honorCategoryShell p {
+    font-size: 11px;
+    padding: 2px 0;
+    font-weight: normal;
+}
+
+.honorCategoryShell p:nth-child(odd) {
+    background: lightgray;
+}
+
+.socialBodyShell {
+    display: flex;
+    justify-content: space-between;
+    height: 216px;
+    overflow: hidden;
+}
+
+.socialShell h2 {
+    text-align: left;
+    padding-left: 10px
+}
+
+.socialRightShell, .socialLeftShell {
+    width: 224px;
+}
+
+.socialLeftShell {
+    border-right: 1px solid #222;
+}
+
+.socialLeftShell h2 {
+    margin-right: -1px
+}
+
+.valueDisplay {
+    padding-right: 5px;
 }
 
 .traitsLocation {
