--- a/src/components/character/views/components/pairComponents/editPair.css
+++ b/src/components/character/views/components/pairComponents/editPair.css
@@ -19,11 +19,15 @@
 }
 
 .viewPairListStriping .stripesShell, .viewPairListStriping .contentPairListShell {
-    position: absolute;
     display: flex;
     flex-direction: column;
     width: 100%;
     flex-wrap: wrap;
+}
+
+.viewPairListStriping .contentPairListShell {
+    position: absolute;
+    top: 0
 }
 
 .titleInput {
