--- a/src/components/character/character.css
+++ b/src/components/character/character.css
@@ -364,7 +364,7 @@ input.secondarylevelLocation {
 }
 
 .statRowsShell p, .movementRowsSell p, .stressThresholdShell p, .stressThresholdShell input, .rangeShell p,
- .socialShell p, .socialShell input, .skillShell p {
+ .socialShell p, .socialShell input, .skillShell p, .cashAndGearShell p, .cashAndGearShell input {
     position: unset !important;
     z-index: 1;
     margin: 0;
@@ -1220,34 +1220,115 @@ input.secondarylevelLocation {
     overflow: hidden;
 }
 
-.copperLocation {
-    top: 336px;
+.cashAndGearShell {
+    top: 335px;
+    position: absolute;
+    width: 776px;
+    left: 20px;
+}
+
+.cashShell {
+    position: absolute;
+    top: 0;
+    right: -2px;
+    display: flex;
+    height: 22.4px;
+    padding: 0px 2px;
+}
+
+.cashIndividual {
     width: 54px;
-    left: 516px;
     text-align: center;
 }
 
-.silverLocation {
-    top: 336px;
-    width: 54px;
-    left: 592px;
-    text-align: center;
+.cashShell div {
+    width: 75px;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 2px
 }
 
-.goldLocation {
-    top: 336px;
-    width: 54px;
-    left: 666px;
-    text-align: center;
+.cashShell div:nth-child(odd) {
+    background: white
 }
 
-.platiniumLocation {
-    top: 336px;
-    width: 54px;
-    left: 742px;
-    text-align: center;
+.cashShell div:nth-child(even) {
+    background: lightgray
 }
 
+.cashShell div p {
+    padding-top: 4px;
+    font-family: 'Vollkorn SC', serif;
+    font-weight: bold;
+}
+
+.gearColumns {
+    display: flex;
+    justify-content: space-between;
+}
+
+.gearColumn {
+    width: 25%;
+}
+
+
+.gearHeaderShell {
+    display: flex;
+    justify-content: space-between;
+    background: #222;
+    padding: 0 0 0 5px
+}
+
+.gearHeaderShell h2:first-child {
+    width: 75%;
+    text-align: left;
+}
+
+.gearHeaderShell h2:nth-child(2) {
+    width: 25%;
+}
+
+.carryShell {
+    position: relative;
+    width: 100%;
+    border: 2px solid #222;
+    background: lightgray;
+    text-align: center;
+    height: 19.6px;
+}
+
+.carryBackground {
+    position: absolute;
+    top: 0;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.carryBackground p {
+    font-family: 'Vollkorn SC', serif;
+}
+
+.carryBackground p:first-child, .carryBackground p:last-child, .carryForeground p:first-child, .carryForeground p:last-child {
+    min-width: 45%;
+}
+
+.carryBackground p:last-child {
+    color: whitesmoke;
+}
+
+.carryForeground {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.carryForeground p:last-child {
+    font-family: 'Vollkorn SC', serif;
+    font-weight: bold;
+    padding: 1px 0;
+}
+ 
 .circle {
     border-radius: 50px/50px;
     border: solid 2px #000;
@@ -1905,6 +1986,7 @@ textarea.traitsfour {
     flex-wrap: wrap;
     justify-content: space-between;
     width: 33%;
+    height: 19.6px;
 }
 
 .skillMods div:nth-child(odd) {
